--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/themes/spectral"]
-	path = src/themes/spectral
+[submodule "themes/spectral"]
+	path = themes/spectral
 	url = https://github.com/sbruder/spectral.git
