--- a/hugo.yaml
+++ b/hugo.yaml
@@ -30,7 +30,7 @@ params:
       img: "img/family-of-five-640px.jpg"
       img_alt: "blurry background: white/grey"
       body: |
-        Vi er en lett kaotisk familie på fem, hvor eldste barn i familien fikk diagnosen i desember 2015.
+        Vi er en lett kaotisk familie på fem, hvor ett av våre barn fikk diagnosen i desember 2015.
     -
       title: 'Er det dyrt?'
       img: "img/rune-on-trampoline-640px.jpg"
